# tomobile

./: CMakeLists.txt  LICENSE  README.md  main.cpp  res.qrc
core/: adbprocess.cpp  adbprocess.h  binary.h  common.h  config.cpp  config.h  control_msg.cpp  control_msg.h  controller.cpp  controller.h  decoder.cpp  decoder.h  demuxer.cpp  demuxer.h  device.cpp  device.h  frame.cpp  frame.h  frame_buffer.cpp  frame_buffer.h  inject_normal.cpp  inject_normal.h  input_events.h  mutex.cpp  packet.cpp  packet.h  packet_sink.cpp  packet_sink.h  recorder.cpp  recorder.h  tcpsocket.cpp  tcpsocket.h  utils.cpp  utils.h
ffmpeg/win32/include/libavutil/: ffversion.h
ffmpeg/win32/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libswresample.pc
ffmpeg/win64/lib/: avcodec-60.def  avformat-60.def
ffmpeg/win64/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc
libusb-1.0.26-binaries/: README
libusb-1.0.26-binaries/VS2015-Win32/dll/: libusb-1.0.iobj  libusb-1.0.ipdb
libusb-1.0.26-binaries/VS2015-Win32/lib/: getopt.lib  libusb-1.0.lib
libusb-1.0.26-binaries/VS2015-x64/dll/: libusb-1.0.iobj  libusb-1.0.ipdb
libusb-1.0.26-binaries/VS2015-x64/dll/libusb-1.0 (dll)/: libusb-1.0.res
libusb-1.0.26-binaries/libusb-MinGW-Win32/lib/: libusb-1.0.la
libusb-1.0.26-binaries/libusb-MinGW-Win32/lib/pkgconfig/: libusb-1.0.pc
libusb-1.0.26-binaries/libusb-cygwin-Win32/lib/: libusb-1.0.la
libusb-1.0.26-binaries/libusb-cygwin-Win32/lib/pkgconfig/: libusb-1.0.pc
libusb-1.0.26-binaries/libusb-cygwin-x64/lib/: libusb-1.0.la
libusb-1.0.26-binaries/libusb-cygwin-x64/lib/pkgconfig/: libusb-1.0.pc
libusb-1.0.26-binaries/macos_11.6/lib/: libusb-1.0.la
libusb-1.0.26-binaries/macos_11.6/lib/pkgconfig/: libusb-1.0.pc
res/qss/: main.css
ui/: aboutform.cpp  aboutform.h  aboutform.ui  devicelistform.cpp  devicelistform.h  devicelistform.ui  iconfont.cpp  iconfont.h  leftbutton.cpp  leftbutton.h  leftbutton.ui  leftform.cpp  leftform.h  leftform.ui  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  previewwidget.cpp  previewwidget.h  previewwidget.ui  settingsform.cpp  settingsform.h  settingsform.ui  tabitemform.cpp  tabitemform.h  tabitemform.ui  titlebar.cpp  titlebar.h  titlebar.ui  toolsform.cpp  toolsform.h  toolsform.ui  video_widget.cpp  video_widget.h  videobottombar.cpp  videobottombar.h  videobottombar.ui  videoform.cpp  videoform.h  (+4 more)
